[package]
name = "pangocairo"
documentation = "http://gtk-rs.org/docs/pangocairo/"
homepage = "http://gtk-rs.org/"
authors = ["The Gtk-rs Project Developers"]
keywords = ["pango", "cairo", "gtk-rs", "gnome"]
readme = "README.md"
version = "0.2.1"
description = "Rust bindings for the PangoCairo library"
repository = "https://github.com/gtk-rs/pangocairo"
license = "MIT"

[features]
dox = ["glib/dox", "pango/dox", "cairo-rs/dox"]

[dependencies]
libc = "0.2"
bitflags = "0.9"
pango-sys = "0.4.0"
glib = "0.3.0"
glib-sys = "0.4.0"
gobject-sys = "0.4.0"
cairo-sys-rs = "0.4.0"
pangocairo-sys = "0.4.1"
pango = "0.2.0"
cairo-rs = "0.2.0"
